APL-1547 joined apl-api2 and apl-api2-generator modules;