@@ -1,11 +1,10 @@
 #!/bin/bash
-
-GENERATOR_REMOTE_JAR=https://repo1.maven.org/maven2/io/swagger/codegen/v3/swagger-codegen-cli/3.0.3/swagger-codegen-cli-3.0.3.jar
-GENERATOR_LOCAL_JAR=/home/az/projects/swagger-codegen-3.0.20/modules/swagger-codegen-cli/target/swagger-codegen-cli.jar
-GENERATOR_JAR=swagger-codegen-cli.jar
-CONFIG_FILE=java-openapi-resteasy.json
-OUTPUT_DIR=../apl-api2
-cp $GENERATOR_LOCAL_JAR $GENERATOR_JAR
+BASE_DIR=generator
+GENERATOR_VERSION=3.0.19
+GENERATOR_REMOTE_JAR=https://repo1.maven.org/maven2/io/swagger/codegen/v3/swagger-codegen-cli/${GENERATOR_VERSION}/swagger-codegen-cli-${GENERATOR_VERSION}.jar
+GENERATOR_JAR=$BASE_DIR/swagger-codegen-cli-${GENERATOR_VERSION}.jar
+CONFIG_FILE=$BASE_DIR/java-openapi-resteasy.json
+OUTPUT_DIR=./
 if [ ! -f $GENERATOR_JAR ]; then
     echo "Generator not found. Try downloading remote file $GENERATOR_REMOTE_JAR"
     curl --silent --output $GENERATOR_JAR $GENERATOR_REMOTE_JAR
@@ -14,15 +13,16 @@ if [ ! -f $GENERATOR_JAR ]; then
         exit 1
     fi
 fi
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -Dlogback.configurationFile=logback.xml"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -Dlogback.configurationFile=logback.xml"
 
 echo "Removing files and folders under $OUTPUT_DIR/src"
-rm -rf $OUTPUT_DIR/src
+rm -rf $OUTPUT_DIR/src/gen
+rm -rf $OUTPUT_DIR/target
 
 INPUT_SPEC=(src/main/resources/yaml/apollo-api-v2.yaml src/main/resources/yaml/apollo-auth-api.yaml)
 for spec in ${INPUT_SPEC[*]}; do
     echo "Use specification: $spec"
-    GENERATOR_GENERATOR_ARGS=" generate -DhideGenerationTimestamp=true --config $CONFIG_FILE --lang jaxrs-resteasy --ignore-file-override ./.openapi-generator-ignore --output $OUTPUT_DIR --input-spec $spec"
+    GENERATOR_GENERATOR_ARGS=" generate -DhideGenerationTimestamp=true --config $CONFIG_FILE --lang jaxrs-resteasy --output $OUTPUT_DIR --input-spec $spec"
     java $JAVA_OPTS -jar $GENERATOR_JAR $GENERATOR_GENERATOR_ARGS
 done
 
